force-app/main/default/objects/PRISM_Circuit__c/PRISM_Circuit__c.object-meta.xml
<CustomObject>
    <description>Electrical circuit — feeder or distribution line — within a service territory.</description>
    <label>Circuit</label>
    <nameField>
        <label>Circuit ID</label>
        <type>AutoNumber</type>
        <displayFormat>CIR-{00000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Circuits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>