force-app/main/default/objects/PRISM_Circuit__c/fields/LengthMiles__c.field-meta.xml
<CustomField>
    <fullName>LengthMiles__c</fullName>
    <label>Length (Miles)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>