force-app/main/default/objects/PRISM_Circuit__c/fields/OperationalStatus__c.field-meta.xml
<CustomField>
    <fullName>OperationalStatus__c</fullName>
    <label>Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>De-energized</fullName><default>false</default><label>De-energized</label></value>
            <value><fullName>Under Maintenance</fullName><default>false</default><label>Under Maintenance</label></value>
            <value><fullName>Retired</fullName><default>false</default><label>Retired</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>