force-app/main/default/objects/PRISM_Circuit__c/fields/ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>ServiceTerritory__c</fullName>
    <label>Service Territory</label>
    <type>MasterDetail</type>
    <referenceTo>PRISM_ServiceTerritory__c</referenceTo>
    <relationshipLabel>Circuits</relationshipLabel>
    <relationshipName>Circuits</relationshipName>
    <required>true</required>
</CustomField>