force-app/main/default/objects/PRISM_Circuit__c/fields/VoltageKV__c.field-meta.xml
<CustomField>
    <fullName>VoltageKV__c</fullName>
    <label>Voltage (kV)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
</CustomField>